--- a/index.html
+++ b/index.html
@@ -117,6 +117,28 @@
         </li>
       </ul>
     </div>
+
+
+  <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase-firestore.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCcav0S0ZghyTzV5G3x0NufsO47gkJPgvE",
+      authDomain: "fire-auth-22f49.firebaseapp.com",
+      databaseURL: "https://fire-auth-22f49.firebaseio.com",
+      projectId: "fire-auth-22f49"
+    };
+    firebase.initializeApp(config);
+
+    // make auth and firestore references
+    const auth = firebase.auth()
+    const db = firebase.firestore()
+
+    // update firestore settings
+    db.settings({ timestampsInSnapshots: true })
+  </script>
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
