--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       </a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li class="logged-in">
-          <a href="#" class="grey-text modal-trigger" id="logout" data-target="modal-account">Account</a>
+          <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
         </li>
         <li class="logged-in">
           <a href="#" class="grey-text" id="logout">Logout</a>
         </li>
           <li class="logged-in">
-            <a href="#" class="grey-text modal-trigger" id="logout" data-target="modal-create">Create guide</a>
+            <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create guide</a>
           </li>
           <li class="logged-in">
-            <a href="#" class="grey-text modal-trigger" id="logout" data-target="modal-login">Login</a>
+            <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
           </li>
           <li class="logged-in">
-            <a href="#" class="grey-text modal-trigger" id="logout" data-target="modal-signup">Sign up</a>
+            <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
           </li>
         </li>
       </ul>
